2007-10-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Move loading of tramp-util.el and tramp-vc.el to
	tramp-compat.el.
	(tramp-make-tramp-temp-file): Complete rewrite.  Create remote
	temporary file if possible, in order to avoid a security hole.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Call `tramp-make-tramp-temp-file'
	with DONT-CREATE, because the connection is not setup yet.
	(tramp-handle-process-file): Rewrite temporary file handling.
	(tramp-completion-mode): New defvar.
	(tramp-completion-mode-p): Use it.

	* tramp-compat.el (top):  Load tramp-util.el and tramp-vc.el.

	* tramp-fish.el (tramp-fish-handle-process-file): Rewrite
	temporary file handling.

2007-10-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-temp-file): Move to tramp-compat.el.
	(tramp-do-copy-or-rename-file-directly): Handle tmpfile only in
	the cond clauses where needed.
	(tramp-handle-write-region): Rearrange code for proper handling of
	tmpfile.

	* tramp-compat.el (tramp-compat-make-temp-file): New defsubst.

	* tramp.el:
	* tramp-fish.el:
	* tramp-ftp.el:
	* tramp-smb.el: Rename `tramp-make-temp-file' to
	`tramp-compat-make-temp-file'.

2007-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Add tramp-compat to `tramp-unload-hook'.
	(tramp-file-name-handler-alist): Add
	`tramp-handle-insert-file-contents-literally'.  Needed for XEmacs.
	(tramp-make-temp-file): Use `make-temp-name'. `make-temp-file',
	used before, creates the file already, which is not desired.
	(tramp-do-copy-or-rename-file-directly): Simplify handling of
	temporary file.
	(tramp-handle-insert-file-contents): Assign the result in the
	short track case.
	(tramp-handle-insert-file-contents-literally): New defun.
	(tramp-completion-mode-p): Revert change from 2007-09-24.
	Checking for `return' etc as last character is not sufficient, for
	example in dired-mode when entering <g> (revert-buffer) or
	<s> (dired-sort).
